--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ clap = { version = "3.2.17", features = ["derive"] }
 encoding_rs = "0.8.31"
 regex = "1.6"
 chrono = "0.4.22"
+strum = "0.24.1"
+strum_macros = "0.24.3"
 
 [dependencies.rusqlite]
 version = "0.28.0"
