--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,18 +16,18 @@ jobs:
     strategy:
       matrix:
         include:
-          - target: x86_64-unknown-linux-musl
-            os: ubuntu-latest
-            ext: ''
+          # - target: x86_64-unknown-linux-musl
+          #   os: ubuntu-latest
+          #   ext: ""
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-            ext: ''            
+            ext: ""
           - target: x86_64-pc-windows-msvc
             os: windows-latest
             ext: .exe
           - target: x86_64-apple-darwin
             os: macos-latest
-            ext: ''
+            ext: ""
 
     runs-on: ${{ matrix.os }}
 
@@ -36,12 +36,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install musl and required packages
-        if: matrix.target == 'x86_64-unknown-linux-musl'
+        if: matrix.os == 'ubuntu-latest'
         run: |
-          sudo apt update && sudo apt install -qq -y musl-tools libssl-dev pkg-config build-essential --no-install-recommends
+          sudo apt update && sudo apt install -y musl-tools libssl-dev pkg-config build-essential autoconf
 
       - name: link sslconf
-        if: matrix.target == 'x86_64-unknown-linux-musl'
+        if: matrix.os == 'ubuntu-latest'
         run: |
           cd /usr/include/openssl/
           sudo ln -s /usr/include/gnutls/openssl.h .
